2002-01-27  Darke  <darkepaw@users.sourceforge.net>
	* usecode/ucxt/head2data*: Creates data/u7bgintrinsics.data and
	data/u7siintrinsics.data from their respective *intrinsics.h files.

	* usecode/ucxt/*: Modifications to allow for the above.

	* usecode/ucxt/*: Fixed U7opens.

2002-01-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/wuc.c, rip.c: minor bugfixes
	* tools/rip.c: use .uco extension for extracted objects

2002-01-26  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/:  'Groups' of shapes are starting to work, with a group
	opened by double-clicking its name, and shapes added to it by
	dragging them to its window.

2002-01-25  Darke  <darkepaw@users.sourceforge.net>
	* mapedit/, usecode/compiler/: Namespaces.

2002-01-24  Ryan Nunn  <triforce@merlin.net.au>
	* server/servewin32.cc : Accidently force WinNT/2K/XP to use the Win9x
	  comms.

2002-01-24  Ryan Nunn  <triforce@merlin.net.au>
	* msvcstuff/msvc_kludges.h : HAVE_SSTREAM
	* msvcstuff/exconfig/exconfig.cpp : Updated for new config constructors
	* mapedit/exult_studio.cc : Console redirection for Win32
	* server/server.cc, server/servewin32.* : Communications for Win9x/ME.
	  May have 'issues' if multiple copies of Exult and Exult Studio are
	  running. Doesn't properly detect if the connection is lost.

2002-01-24  Darke  <darkepaw@users.sourceforge.net>
	* conf/Configuration.cc: istream::rdbuf() under win32 seems to be
	slightly broken. It _should_ work now. Code is a mess, but I want to
	get off this 'doze box. <grin>

	* And again. Fixing a bug where I was reading the config file twice
	upon loading. The file size would grow exponentially at each write.

	* usecode/ucxt/src/opcodes.cc: Fixed compile problems under mingw.

	* usecode/ucxt/*: Renamed src/ucdump.cc to src/ucxt.cc to avoid name
	conflict, specifically under win32.

2002-01-23  Darke  <darkepaw@users.sourceforge.net>
	* exult.cc: Fixed a compile error with people compiling using
	--enable-usecode-debugger.